--- a/module/Backend/view/layout/header.phtml
+++ b/module/Backend/view/layout/header.phtml
@@ -13,9 +13,9 @@ $action = $params['action'];
         </button>
 
         <!--logo start-->
-        <a href="<?php echo $this->serverUrl() . $this->Url('backend', array('controller' => 'index', 'action' => 'index')); ?>" class="logo" >Ngáođá<span>.net</span></a>
+        <a href="<?php echo $this->serverUrl() . $this->Url('backend', array('controller' => 'index', 'action' => 'index')); ?>" class="logo" ><span>bestquynhon</span></a>
         <!--logo end-->
-        <div class="horizontal-menu navbar-collapse collapse ">
+        <div class="horizontal-menu navbar-collapse collapse" style="margin-left:0px ">
             <ul class="nav navbar-nav">
                 <li class="dropdown">
                     <a data-toggle="dropdown" data-hover="dropdown" class="dropdown-toggle" href="javascript:;"><i class="icon-list-ul"></i> <b>Quản lý Danh mục </b><b class="icon-angle-down"></b></a>
