--- a/module/Backend/view/layout/layout.phtml
+++ b/module/Backend/view/layout/layout.phtml
@@ -25,7 +25,7 @@
             ?>
             <footer class="site-footer">
                 <div class="text-center">
-                    2016 &copy; NGÁO ĐÁ . NET
+                    2016 &copy; BESTQUYNHON.COM
                     <a href="#" class="go-top">
                         <i class="icon-angle-up"></i>
                     </a>
