--- a/module/Backend/view/backend/user/index.phtml
+++ b/module/Backend/view/backend/user/index.phtml
@@ -26,7 +26,7 @@ $arrGroupList = $this->arrGroupList;
             <p>- <?php echo current($successMessage); ?></p>
         </div>
     <?php endif; ?>
-    <section class="panel">
+    <section class="panel panel-primary">
         <header class="panel-heading">
             Danh sách người dùng
         </header>
