--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -6,9 +6,9 @@
                     <div class="widget">
                         <h4>HỖ TRỢ NGƯỜI DÙNG</h4>
                         <a href="#"><i class="fa fa-arrow-right"></i> Câu hỏi thường gặp</a><br/>
-                        <a href="#"><i class="fa fa-arrow-right"></i> Hướng dẫn đăng tin</a><br/>
-                        <a href="#"><i class="fa fa-arrow-right"></i> Điều khoản sử dụng</a><br/>
-                        <a href="#"><i class="fa fa-arrow-right"></i> Thông báo</a><br/>
+                        <a href="<?php echo $this->serverUrl() . $this->Url('general', ['geneSlug' => 'general', 'geneId' => 2]); ?>"><i class="fa fa-arrow-right"></i> Hướng dẫn đăng tin</a><br/>
+                        <a href="<?php echo $this->serverUrl() . $this->Url('general', ['geneSlug' => 'dieu-khoan-su-dung-tai-bestquynhon', 'geneId' => 3]); ?>"><i class="fa fa-arrow-right"></i> Điều khoản sử dụng</a><br/>
+                        <a href="<?php echo $this->serverUrl() . $this->Url('general', ['geneSlug' => 'general', 'geneId' => 4]); ?>"><i class="fa fa-arrow-right"></i> Biểu giá</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Liên hệ</a>
                     </div>
                 </div>
@@ -18,13 +18,13 @@
                         <a href="#"><i class="fa fa-arrow-right"></i> Đăng nhập / Đăng ký</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Quên mật khẩu</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Thông tin tài khoản</a><br/>
-                        <a href="#"><i class="fa fa-arrow-right"></i> Chính sách bảo mật</a><br/>
+                        <a href="<?php echo $this->serverUrl() . $this->Url('general', ['geneSlug' => 'general', 'geneId' => 5]); ?>"><i class="fa fa-arrow-right"></i> Chính sách bảo mật</a><br/>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h4>VỀ BESTQUYNHON.COM</h4>
-                        <a href="#"><i class="fa fa-arrow-right"></i> Giới thiệu về Bestquynhon.com</a><br/>
+                        <a href="<?php echo $this->serverUrl() . $this->Url('general', ['geneSlug' => 'general', 'geneId' => 1]); ?>"><i class="fa fa-arrow-right"></i> Giới thiệu về Bestquynhon.com</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Hotline : 0979 57 57 93</a> (a.Tâm)<br/>
                         <a href="mailto:<?php echo My\General::EMAIL_SUPPORT; ?>"><i class="fa fa-envelope-o"></i> <?php echo My\General::EMAIL_SUPPORT; ?></a><br/>
                         <a rel="nofollow" href="skype:ngocchien01?chat"><i class="fa fa-skype"></i> Bestquynhon.com</a><br/>
