--- a/static/b/css/style.css
+++ b/static/b/css/style.css
@@ -4633,3 +4633,50 @@ tr.odd.gradeX td.sorting_1, tr.even.gradeX td.sorting_1, table.display tr.even.g
 .site-min-height {
     min-height: 900px;
 }
+.dropdown-submenu {
+    position: relative !important;
+}
+
+.dropdown-submenu>.dropdown-menu {
+    top: 0 !important;
+    left: 100% !important;
+    margin-top: -6px !important;
+    margin-left: -1px !important;
+    -webkit-border-radius: 0 6px 6px 6px !important;
+    -moz-border-radius: 0 6px 6px !important;
+    border-radius: 0 6px 6px 6px !important;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block !important;
+}
+
+.dropdown-submenu>a:after {
+    display: block !important;
+    content: " " !important;
+    float: right !important;
+    width: 0 !important;
+    height: 0 !important;
+    border-color: transparent !important;
+    border-style: solid !important;
+    border-width: 5px 0 5px 5px !important;
+    border-left-color: #ccc !important;
+    margin-top: 5px !important;
+    margin-right: -10px !important;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff !important;
+}
+
+.dropdown-submenu.pull-left {
+    float: none !important;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100% !important;
+    margin-left: 10px !important;
+    -webkit-border-radius: 6px 0 6px 6px !important; 
+    -moz-border-radius: 6px 0 6px 6px !important;
+    border-radius: 6px 0 6px 6px !important;
+}
