--- a/module/Backend/view/layout/send-mail-when-crawler.phtml
+++ b/module/Backend/view/layout/send-mail-when-crawler.phtml
@@ -20,8 +20,11 @@
                     Mời bạn click vào link bên dưới để xem chi tiết.
                 </p>
                 <div style="color: #454545; font-size: 18px; margin-bottom: 30px; padding: 30px 0 20px;">
-                    <center><div style="color: #e65711; border: none; padding: 10px 0; font-size: 30px; border-radius: 4px; cursor: pointer"><a style="text-decoration:none;" href="<?php echo $this->serverUrl() . '/rao-vat/' . $this->arrContent['cont_slug'] . '-' . $this->arrContent['cont_id'].'.html'; ?>">&#xbb; <?php echo $this->arrContent['cont_title']; ?> &#xab;</a></div></center>
+                    <center><div style="color: #e65711; border: none; padding: 10px 0; font-size: 30px; border-radius: 4px; cursor: pointer"><a style="text-decoration:none;" href="<?php echo $this->serverUrl() . '/rao-vat/' . $this->arrContent['cont_slug'] . '-' . $this->arrContent['cont_id'] . '.html'; ?>">&#xbb; <?php echo $this->arrContent['cont_title']; ?> &#xab;</a></div></center>
                 </div>
+                <p style="color: #454545; font-size: 18px;">
+                    Mật khẩu để sửa tin này là : <b><?php echo json_decode($this->arrContent['user_info'], true)['cont_password']; ?></b>
+                </p>
             </div>
             <?php echo $this->render('frontend/footer-email'); ?>
         </div>
